// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrganizationsListFilter should render correct structure 1`] = `
<DocumentFragment>
  <div
    id="org-list-filters-accordion-set"
  >
    <section
      class="accordion hasSeparator"
      data-test-accordion-section="true"
      id="org-filter-status"
    >
      <div
        class="headerWrapper"
        tabindex="-1"
      >
        <h3
          class="headline size-small margin-small font-weight-bold block"
          data-test-headline="true"
        >
          <button
            aria-controls="accordion1"
            aria-expanded="true"
            aria-label="ui-organizations.filterConfig.vendorStatus filter list"
            class="filterSetHeader"
            id="accordion-toggle-button-org-filter-status"
            tabindex="0"
            type="button"
          >
            <span>
              Icon
            </span>
            <div
              class="labelArea"
            >
              <div
                class="filterSetLabel"
              >
                ui-organizations.filterConfig.vendorStatus
              </div>
            </div>
          </button>
        </h3>
      </div>
      <div
        class="content-wrap expanded"
        style="z-index: 1;"
      >
        <div
          aria-label="[object Object]"
          aria-labelledby="accordion-toggle-button-org-filter-status"
          class="content-region expanded"
          data-test-accordion-wrapper="true"
          id="accordion1"
          role="region"
        >
          <div
            class="checkbox"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-status-active"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Active"
                  id="clickable-filter-status-active"
                  name="Active"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  ui-organizations.organizationStatus.active
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-status-inactive"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Inactive"
                  id="clickable-filter-status-inactive"
                  name="Inactive"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  ui-organizations.organizationStatus.inactive
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-status-pending"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Pending"
                  id="clickable-filter-status-pending"
                  name="Pending"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  ui-organizations.organizationStatus.pending
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
        </div>
      </div>
    </section>
    <section
      class="accordion hasSeparator"
      data-test-accordion-section="true"
      id="org-filter-tags"
    >
      <div
        class="headerWrapper"
        tabindex="-1"
      >
        <h3
          class="headline size-small margin-small font-weight-bold block"
          data-test-headline="true"
        >
          <button
            aria-controls="accordion2"
            aria-expanded="false"
            aria-label="stripes-acq-components.filter.tags filter list"
            class="filterSetHeader"
            id="accordion-toggle-button-org-filter-tags"
            tabindex="0"
            type="button"
          >
            <span>
              Icon
            </span>
            <div
              class="labelArea"
            >
              <div
                class="filterSetLabel"
              >
                stripes-acq-components.filter.tags
              </div>
            </div>
          </button>
        </h3>
      </div>
      <div
        class="content-wrap"
        style="z-index: 1;"
      >
        <div
          aria-label="[object Object]"
          aria-labelledby="accordion-toggle-button-org-filter-tags"
          class="content-region"
          data-test-accordion-wrapper="true"
          id="accordion2"
          role="region"
        >
          <div
            class="multiSelectContainer"
            id="acq-tags-filter"
          >
            <div
              aria-live="assertive"
              aria-relevant="additions"
              class="sr-only"
            />
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="accordion-toggle-button-org-filter-tags"
              class="multiSelectContainer"
              role="application"
            >
              <span
                class="sr-only"
                id="multi-value-status-acq-tags-filter"
              >
                0 items selected
              </span>
              <span
                class="sr-only"
                id="multi-describe-control-acq-tags-filter"
              >
                stripes-components.multiSelection.controlDescription
              </span>
              <div
                class="multiSelectControlWrapper"
              >
                <div
                  aria-describedby="multi-describe-control-acq-tags-filter"
                  aria-labelledby="accordion-toggle-button-org-filter-tags multi-value-status-acq-tags-filter"
                  class="multiSelectControl formControl"
                  role="search"
                  tabindex="0"
                >
                  <div
                    class="multiSelectControlGroup"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-labelledby="accordion-toggle-button-org-filter-tags"
                      autocomplete="off"
                      class="multiSelectFilterField"
                      id="acq-tags-filter-input"
                      type="text"
                      value=""
                    />
                    <input
                      aria-autocomplete="list"
                      aria-hidden="true"
                      autocomplete="off"
                      class="multiSelectValueInput"
                      id="multiselect-input-acq-tags-filter"
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-haspopup="true"
                    aria-label="open menu"
                    class="multiSelectToggleButton"
                    data-toggle="true"
                    role="button"
                    type="button"
                  >
                    <div
                      class="textFieldIcon"
                    >
                      <span>
                        Icon
                      </span>
                    </div>
                  </button>
                </div>
                <div
                  class="multiSelectMenu"
                  hidden=""
                  style="width: 100px;"
                >
                  <div
                    class="multiSelectFeedback"
                    role="alert"
                  >
                    <div
                      class="multiSelectEmptyMessage"
                    >
                      stripes-components.multiSelection.defaultEmptyMessage
                    </div>
                  </div>
                  <ul
                    aria-labelledby="accordion-toggle-button-org-filter-tags"
                    class="multiSelectOptionList"
                    id="multiselect-option-list-acq-tags-filter"
                    role="listbox"
                    style="max-height: 168px;"
                  />
                </div>
              </div>
            </div>
            <div
              role="alert"
            />
          </div>
        </div>
      </div>
    </section>
    <section
      class="accordion hasSeparator"
      data-test-accordion-section="true"
      id="org-filter-isVendor"
    >
      <div
        class="headerWrapper"
        tabindex="-1"
      >
        <h3
          class="headline size-small margin-small font-weight-bold block"
          data-test-headline="true"
        >
          <button
            aria-controls="accordion3"
            aria-expanded="false"
            aria-label="ui-organizations.filterConfig.isVendor filter list"
            class="filterSetHeader"
            id="accordion-toggle-button-org-filter-isVendor"
            tabindex="0"
            type="button"
          >
            <span>
              Icon
            </span>
            <div
              class="labelArea"
            >
              <div
                class="filterSetLabel"
              >
                ui-organizations.filterConfig.isVendor
              </div>
            </div>
          </button>
        </h3>
      </div>
      <div
        class="content-wrap"
        style="z-index: 1;"
      >
        <div
          aria-label="[object Object]"
          aria-labelledby="accordion-toggle-button-org-filter-isVendor"
          class="content-region"
          data-test-accordion-wrapper="true"
          id="accordion3"
          role="region"
        >
          <div
            class="checkbox"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-isVendor-true"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="true"
                  id="clickable-filter-isVendor-true"
                  name="true"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  ui-organizations.filterConfig.boolean.true
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-isVendor-false"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="false"
                  id="clickable-filter-isVendor-false"
                  name="false"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  ui-organizations.filterConfig.boolean.false
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
        </div>
      </div>
    </section>
    <section
      class="accordion hasSeparator"
      data-test-accordion-section="true"
      id="org-filter-addresses"
    >
      <div
        class="headerWrapper"
        tabindex="-1"
      >
        <h3
          class="headline size-small margin-small font-weight-bold block"
          data-test-headline="true"
        >
          <button
            aria-controls="accordion4"
            aria-expanded="false"
            aria-label="ui-organizations.filterConfig.country filter list"
            class="filterSetHeader"
            id="accordion-toggle-button-org-filter-addresses"
            tabindex="0"
            type="button"
          >
            <span>
              Icon
            </span>
            <div
              class="labelArea"
            >
              <div
                class="filterSetLabel"
              >
                ui-organizations.filterConfig.country
              </div>
            </div>
          </button>
        </h3>
      </div>
      <div
        class="content-wrap"
        style="z-index: 2;"
      >
        <div
          aria-label="[object Object]"
          aria-labelledby="accordion-toggle-button-org-filter-addresses"
          class="content-region"
          data-test-accordion-wrapper="true"
          id="accordion4"
          role="region"
        >
          <div
            class="tether-target tether-enabled tether-abutted tether-abutted-left tether-abutted-right tether-abutted-top tether-abutted-bottom tether-element-attached-top tether-element-attached-center tether-target-attached-bottom tether-target-attached-center"
            style="position: relative; width: 100%;"
          >
            <div
              aria-live="assertive"
              aria-relevant="additions"
              class="sr-only"
            />
            <div
              class="selectionControlContainer"
            >
              <button
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="accordion-toggle-button-org-filter-addresses selected-addresses-selection-item"
                aria-owns="sl-addresses-selection"
                class="selectionControl formControl"
                id="addresses-selection"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  stripes-components.selection.controlLabel
                </span>
                <div
                  class="singleValue"
                  id="selected-addresses-selection-item"
                />
              </button>
              <div
                class="selectionEndControls"
              >
                <div
                  class="textFieldIcon"
                >
                  <span>
                    Icon
                  </span>
                </div>
              </div>
            </div>
            <div
              role="alert"
            />
          </div>
        </div>
      </div>
    </section>
    <section
      class="accordion hasSeparator"
      data-test-accordion-section="true"
      id="org-filter-language"
    >
      <div
        class="headerWrapper"
        tabindex="-1"
      >
        <h3
          class="headline size-small margin-small font-weight-bold block"
          data-test-headline="true"
        >
          <button
            aria-controls="accordion5"
            aria-expanded="false"
            aria-label="ui-organizations.filterConfig.languages filter list"
            class="filterSetHeader"
            id="accordion-toggle-button-org-filter-language"
            tabindex="0"
            type="button"
          >
            <span>
              Icon
            </span>
            <div
              class="labelArea"
            >
              <div
                class="filterSetLabel"
              >
                ui-organizations.filterConfig.languages
              </div>
            </div>
          </button>
        </h3>
      </div>
      <div
        class="content-wrap"
        style="z-index: 2;"
      >
        <div
          aria-label="[object Object]"
          aria-labelledby="accordion-toggle-button-org-filter-language"
          class="content-region"
          data-test-accordion-wrapper="true"
          id="accordion5"
          role="region"
        >
          <div
            class="tether-target tether-enabled tether-abutted tether-abutted-left tether-abutted-right tether-abutted-top tether-abutted-bottom tether-element-attached-top tether-element-attached-center tether-target-attached-bottom tether-target-attached-center"
            style="position: relative; width: 100%;"
          >
            <div
              aria-live="assertive"
              aria-relevant="additions"
              class="sr-only"
            />
            <div
              class="selectionControlContainer"
            >
              <button
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="accordion-toggle-button-org-filter-language selected-language-selection-item"
                aria-owns="sl-language-selection"
                class="selectionControl formControl"
                id="language-selection"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  stripes-components.selection.controlLabel
                </span>
                <div
                  class="singleValue"
                  id="selected-language-selection-item"
                />
              </button>
              <div
                class="selectionEndControls"
              >
                <div
                  class="textFieldIcon"
                >
                  <span>
                    Icon
                  </span>
                </div>
              </div>
            </div>
            <div
              role="alert"
            />
          </div>
        </div>
      </div>
    </section>
    <section
      class="accordion hasSeparator"
      data-test-accordion-section="true"
      id="org-filter-paymentMethod"
    >
      <div
        class="headerWrapper"
        tabindex="-1"
      >
        <h3
          class="headline size-small margin-small font-weight-bold block"
          data-test-headline="true"
        >
          <button
            aria-controls="accordion6"
            aria-expanded="false"
            aria-label="ui-organizations.filterConfig.paymentMethod filter list"
            class="filterSetHeader"
            id="accordion-toggle-button-org-filter-paymentMethod"
            tabindex="0"
            type="button"
          >
            <span>
              Icon
            </span>
            <div
              class="labelArea"
            >
              <div
                class="filterSetLabel"
              >
                ui-organizations.filterConfig.paymentMethod
              </div>
            </div>
          </button>
        </h3>
      </div>
      <div
        class="content-wrap"
        style="z-index: 1;"
      >
        <div
          aria-label="[object Object]"
          aria-labelledby="accordion-toggle-button-org-filter-paymentMethod"
          class="content-region"
          data-test-accordion-wrapper="true"
          id="accordion6"
          role="region"
        >
          <div
            class="checkbox"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-paymentMethod-cash"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Cash"
                  id="clickable-filter-paymentMethod-cash"
                  name="Cash"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  stripes-acq-components.paymentMethod.cash
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-paymentMethod-credit-card"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Credit Card"
                  id="clickable-filter-paymentMethod-credit-card"
                  name="Credit Card"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  stripes-acq-components.paymentMethod.card
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-paymentMethod-eft"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="EFT"
                  id="clickable-filter-paymentMethod-eft"
                  name="EFT"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  stripes-acq-components.paymentMethod.eft
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-paymentMethod-deposit-account"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Deposit Account"
                  id="clickable-filter-paymentMethod-deposit-account"
                  name="Deposit Account"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  stripes-acq-components.paymentMethod.depAccount
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-paymentMethod-physical-check"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Physical Check"
                  id="clickable-filter-paymentMethod-physical-check"
                  name="Physical Check"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  stripes-acq-components.paymentMethod.physicalCheck
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-paymentMethod-bank-draft"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Bank Draft"
                  id="clickable-filter-paymentMethod-bank-draft"
                  name="Bank Draft"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  stripes-acq-components.paymentMethod.bankDraft
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-paymentMethod-internal-transfer"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Internal Transfer"
                  id="clickable-filter-paymentMethod-internal-transfer"
                  name="Internal Transfer"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  stripes-acq-components.paymentMethod.internalTransfer
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-paymentMethod-other"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Other"
                  id="clickable-filter-paymentMethod-other"
                  name="Other"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  stripes-acq-components.paymentMethod.other
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
        </div>
      </div>
    </section>
    <section
      class="accordion hasSeparator"
      data-test-accordion-section="true"
      id="org-filter-acqUnitIds"
    >
      <div
        class="headerWrapper"
        tabindex="-1"
      >
        <h3
          class="headline size-small margin-small font-weight-bold block"
          data-test-headline="true"
        >
          <button
            aria-controls="accordion7"
            aria-expanded="false"
            aria-label="stripes-acq-components.filter.acqUnit filter list"
            class="filterSetHeader"
            id="accordion-toggle-button-org-filter-acqUnitIds"
            tabindex="0"
            type="button"
          >
            <span>
              Icon
            </span>
            <div
              class="labelArea"
            >
              <div
                class="filterSetLabel"
              >
                stripes-acq-components.filter.acqUnit
              </div>
            </div>
          </button>
        </h3>
      </div>
      <div
        class="content-wrap"
        style="z-index: 2;"
      >
        <div
          aria-label="[object Object]"
          aria-labelledby="accordion-toggle-button-org-filter-acqUnitIds"
          class="content-region"
          data-test-accordion-wrapper="true"
          id="accordion7"
          role="region"
        >
          <div
            class="tether-target tether-enabled tether-abutted tether-abutted-left tether-abutted-right tether-abutted-top tether-abutted-bottom tether-element-attached-top tether-element-attached-center tether-target-attached-bottom tether-target-attached-center"
            style="position: relative; width: 100%;"
          >
            <div
              aria-live="assertive"
              aria-relevant="additions"
              class="sr-only"
            />
            <div
              class="selectionControlContainer"
            >
              <button
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="accordion-toggle-button-org-filter-acqUnitIds selected-acqUnitIds-selection-item"
                aria-owns="sl-acqUnitIds-selection"
                class="selectionControl formControl"
                id="acqUnitIds-selection"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  stripes-components.selection.controlLabel
                </span>
                <div
                  class="singleValue"
                  id="selected-acqUnitIds-selection-item"
                />
              </button>
              <div
                class="selectionEndControls"
              >
                <div
                  class="textFieldIcon"
                >
                  <span>
                    Icon
                  </span>
                </div>
              </div>
            </div>
            <div
              role="alert"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`OrganizationsListFilter should render correct structure when disabled 1`] = `
<DocumentFragment>
  <div
    id="org-list-filters-accordion-set"
  >
    <section
      class="accordion hasSeparator"
      data-test-accordion-section="true"
      id="org-filter-status"
    >
      <div
        class="headerWrapper"
        tabindex="-1"
      >
        <h3
          class="headline size-small margin-small font-weight-bold block"
          data-test-headline="true"
        >
          <button
            aria-controls="accordion22"
            aria-expanded="true"
            aria-label="ui-organizations.filterConfig.vendorStatus filter list"
            class="filterSetHeader"
            id="accordion-toggle-button-org-filter-status"
            tabindex="0"
            type="button"
          >
            <span>
              Icon
            </span>
            <div
              class="labelArea"
            >
              <div
                class="filterSetLabel"
              >
                ui-organizations.filterConfig.vendorStatus
              </div>
            </div>
          </button>
        </h3>
      </div>
      <div
        class="content-wrap expanded"
        style="z-index: 1;"
      >
        <div
          aria-label="[object Object]"
          aria-labelledby="accordion-toggle-button-org-filter-status"
          class="content-region expanded"
          data-test-accordion-wrapper="true"
          id="accordion22"
          role="region"
        >
          <div
            class="checkbox readOnly"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-status-active"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Active"
                  id="clickable-filter-status-active"
                  name="Active"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  ui-organizations.organizationStatus.active
                  <span
                    class="sr-only"
                  >
                    stripes-components.readonly
                  </span>
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox readOnly"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-status-inactive"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Inactive"
                  id="clickable-filter-status-inactive"
                  name="Inactive"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  ui-organizations.organizationStatus.inactive
                  <span
                    class="sr-only"
                  >
                    stripes-components.readonly
                  </span>
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox readOnly"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-status-pending"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Pending"
                  id="clickable-filter-status-pending"
                  name="Pending"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  ui-organizations.organizationStatus.pending
                  <span
                    class="sr-only"
                  >
                    stripes-components.readonly
                  </span>
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
        </div>
      </div>
    </section>
    <section
      class="accordion hasSeparator"
      data-test-accordion-section="true"
      id="org-filter-tags"
    >
      <div
        class="headerWrapper"
        tabindex="-1"
      >
        <h3
          class="headline size-small margin-small font-weight-bold block"
          data-test-headline="true"
        >
          <button
            aria-controls="accordion23"
            aria-expanded="false"
            aria-label="stripes-acq-components.filter.tags filter list"
            class="filterSetHeader"
            id="accordion-toggle-button-org-filter-tags"
            tabindex="0"
            type="button"
          >
            <span>
              Icon
            </span>
            <div
              class="labelArea"
            >
              <div
                class="filterSetLabel"
              >
                stripes-acq-components.filter.tags
              </div>
            </div>
          </button>
        </h3>
      </div>
      <div
        class="content-wrap"
        style="z-index: 1;"
      >
        <div
          aria-label="[object Object]"
          aria-labelledby="accordion-toggle-button-org-filter-tags"
          class="content-region"
          data-test-accordion-wrapper="true"
          id="accordion23"
          role="region"
        >
          <div
            class="multiSelectContainer"
            id="acq-tags-filter"
          >
            <div
              aria-live="assertive"
              aria-relevant="additions"
              class="sr-only"
            />
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="accordion-toggle-button-org-filter-tags"
              class="multiSelectContainer"
              role="application"
            >
              <span
                class="sr-only"
                id="multi-value-status-acq-tags-filter"
              >
                0 items selected
              </span>
              <span
                class="sr-only"
                id="multi-describe-control-acq-tags-filter"
              >
                stripes-components.multiSelection.controlDescription
              </span>
              <div
                class="multiSelectControlWrapper"
              >
                <div
                  aria-describedby="multi-describe-control-acq-tags-filter"
                  aria-labelledby="accordion-toggle-button-org-filter-tags multi-value-status-acq-tags-filter"
                  class="multiSelectControl isDisabled formControl disabled"
                  role="search"
                  tabindex="0"
                >
                  <div
                    class="multiSelectControlGroup"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-labelledby="accordion-toggle-button-org-filter-tags"
                      autocomplete="off"
                      class="multiSelectFilterField"
                      disabled=""
                      id="acq-tags-filter-input"
                      type="text"
                      value=""
                    />
                    <input
                      aria-autocomplete="list"
                      aria-hidden="true"
                      autocomplete="off"
                      class="multiSelectValueInput"
                      id="multiselect-input-acq-tags-filter"
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-haspopup="true"
                    aria-label="open menu"
                    class="multiSelectToggleButton"
                    data-toggle="true"
                    disabled=""
                    role="button"
                    type="button"
                  >
                    <div
                      class="textFieldIcon"
                    >
                      <span>
                        Icon
                      </span>
                    </div>
                  </button>
                </div>
                <div
                  class="multiSelectMenu"
                  hidden=""
                  style="width: 100px;"
                >
                  <div
                    class="multiSelectFeedback"
                    role="alert"
                  >
                    <div
                      class="multiSelectEmptyMessage"
                    >
                      stripes-components.multiSelection.defaultEmptyMessage
                    </div>
                  </div>
                  <ul
                    aria-labelledby="accordion-toggle-button-org-filter-tags"
                    class="multiSelectOptionList"
                    id="multiselect-option-list-acq-tags-filter"
                    role="listbox"
                    style="max-height: 168px;"
                  />
                </div>
              </div>
            </div>
            <div
              role="alert"
            />
          </div>
        </div>
      </div>
    </section>
    <section
      class="accordion hasSeparator"
      data-test-accordion-section="true"
      id="org-filter-isVendor"
    >
      <div
        class="headerWrapper"
        tabindex="-1"
      >
        <h3
          class="headline size-small margin-small font-weight-bold block"
          data-test-headline="true"
        >
          <button
            aria-controls="accordion24"
            aria-expanded="false"
            aria-label="ui-organizations.filterConfig.isVendor filter list"
            class="filterSetHeader"
            id="accordion-toggle-button-org-filter-isVendor"
            tabindex="0"
            type="button"
          >
            <span>
              Icon
            </span>
            <div
              class="labelArea"
            >
              <div
                class="filterSetLabel"
              >
                ui-organizations.filterConfig.isVendor
              </div>
            </div>
          </button>
        </h3>
      </div>
      <div
        class="content-wrap"
        style="z-index: 1;"
      >
        <div
          aria-label="[object Object]"
          aria-labelledby="accordion-toggle-button-org-filter-isVendor"
          class="content-region"
          data-test-accordion-wrapper="true"
          id="accordion24"
          role="region"
        >
          <div
            class="checkbox readOnly"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-isVendor-true"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="true"
                  id="clickable-filter-isVendor-true"
                  name="true"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  ui-organizations.filterConfig.boolean.true
                  <span
                    class="sr-only"
                  >
                    stripes-components.readonly
                  </span>
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox readOnly"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-isVendor-false"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="false"
                  id="clickable-filter-isVendor-false"
                  name="false"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  ui-organizations.filterConfig.boolean.false
                  <span
                    class="sr-only"
                  >
                    stripes-components.readonly
                  </span>
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
        </div>
      </div>
    </section>
    <section
      class="accordion hasSeparator"
      data-test-accordion-section="true"
      id="org-filter-addresses"
    >
      <div
        class="headerWrapper"
        tabindex="-1"
      >
        <h3
          class="headline size-small margin-small font-weight-bold block"
          data-test-headline="true"
        >
          <button
            aria-controls="accordion25"
            aria-expanded="false"
            aria-label="ui-organizations.filterConfig.country filter list"
            class="filterSetHeader"
            id="accordion-toggle-button-org-filter-addresses"
            tabindex="0"
            type="button"
          >
            <span>
              Icon
            </span>
            <div
              class="labelArea"
            >
              <div
                class="filterSetLabel"
              >
                ui-organizations.filterConfig.country
              </div>
            </div>
          </button>
        </h3>
      </div>
      <div
        class="content-wrap"
        style="z-index: 2;"
      >
        <div
          aria-label="[object Object]"
          aria-labelledby="accordion-toggle-button-org-filter-addresses"
          class="content-region"
          data-test-accordion-wrapper="true"
          id="accordion25"
          role="region"
        >
          <div
            class="tether-target tether-enabled tether-abutted tether-abutted-left tether-abutted-right tether-abutted-top tether-abutted-bottom tether-element-attached-top tether-element-attached-center tether-target-attached-bottom tether-target-attached-center"
            style="position: relative; width: 100%;"
          >
            <div
              aria-live="assertive"
              aria-relevant="additions"
              class="sr-only"
            />
            <div
              class="selectionControlContainer"
            >
              <button
                aria-disabled="true"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="accordion-toggle-button-org-filter-addresses selected-addresses-selection-item"
                aria-owns="sl-addresses-selection"
                class="selectionControl formControl"
                disabled=""
                id="addresses-selection"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  stripes-components.selection.controlLabel
                </span>
                <div
                  class="singleValue"
                  id="selected-addresses-selection-item"
                />
              </button>
              <div
                class="selectionEndControls"
              >
                <div
                  class="textFieldIcon"
                >
                  <span>
                    Icon
                  </span>
                </div>
              </div>
            </div>
            <div
              role="alert"
            />
          </div>
        </div>
      </div>
    </section>
    <section
      class="accordion hasSeparator"
      data-test-accordion-section="true"
      id="org-filter-language"
    >
      <div
        class="headerWrapper"
        tabindex="-1"
      >
        <h3
          class="headline size-small margin-small font-weight-bold block"
          data-test-headline="true"
        >
          <button
            aria-controls="accordion26"
            aria-expanded="false"
            aria-label="ui-organizations.filterConfig.languages filter list"
            class="filterSetHeader"
            id="accordion-toggle-button-org-filter-language"
            tabindex="0"
            type="button"
          >
            <span>
              Icon
            </span>
            <div
              class="labelArea"
            >
              <div
                class="filterSetLabel"
              >
                ui-organizations.filterConfig.languages
              </div>
            </div>
          </button>
        </h3>
      </div>
      <div
        class="content-wrap"
        style="z-index: 2;"
      >
        <div
          aria-label="[object Object]"
          aria-labelledby="accordion-toggle-button-org-filter-language"
          class="content-region"
          data-test-accordion-wrapper="true"
          id="accordion26"
          role="region"
        >
          <div
            class="tether-target tether-enabled tether-abutted tether-abutted-left tether-abutted-right tether-abutted-top tether-abutted-bottom tether-element-attached-top tether-element-attached-center tether-target-attached-bottom tether-target-attached-center"
            style="position: relative; width: 100%;"
          >
            <div
              aria-live="assertive"
              aria-relevant="additions"
              class="sr-only"
            />
            <div
              class="selectionControlContainer"
            >
              <button
                aria-disabled="true"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="accordion-toggle-button-org-filter-language selected-language-selection-item"
                aria-owns="sl-language-selection"
                class="selectionControl formControl"
                disabled=""
                id="language-selection"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  stripes-components.selection.controlLabel
                </span>
                <div
                  class="singleValue"
                  id="selected-language-selection-item"
                />
              </button>
              <div
                class="selectionEndControls"
              >
                <div
                  class="textFieldIcon"
                >
                  <span>
                    Icon
                  </span>
                </div>
              </div>
            </div>
            <div
              role="alert"
            />
          </div>
        </div>
      </div>
    </section>
    <section
      class="accordion hasSeparator"
      data-test-accordion-section="true"
      id="org-filter-paymentMethod"
    >
      <div
        class="headerWrapper"
        tabindex="-1"
      >
        <h3
          class="headline size-small margin-small font-weight-bold block"
          data-test-headline="true"
        >
          <button
            aria-controls="accordion27"
            aria-expanded="false"
            aria-label="ui-organizations.filterConfig.paymentMethod filter list"
            class="filterSetHeader"
            id="accordion-toggle-button-org-filter-paymentMethod"
            tabindex="0"
            type="button"
          >
            <span>
              Icon
            </span>
            <div
              class="labelArea"
            >
              <div
                class="filterSetLabel"
              >
                ui-organizations.filterConfig.paymentMethod
              </div>
            </div>
          </button>
        </h3>
      </div>
      <div
        class="content-wrap"
        style="z-index: 1;"
      >
        <div
          aria-label="[object Object]"
          aria-labelledby="accordion-toggle-button-org-filter-paymentMethod"
          class="content-region"
          data-test-accordion-wrapper="true"
          id="accordion27"
          role="region"
        >
          <div
            class="checkbox readOnly"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-paymentMethod-cash"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Cash"
                  id="clickable-filter-paymentMethod-cash"
                  name="Cash"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  stripes-acq-components.paymentMethod.cash
                  <span
                    class="sr-only"
                  >
                    stripes-components.readonly
                  </span>
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox readOnly"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-paymentMethod-credit-card"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Credit Card"
                  id="clickable-filter-paymentMethod-credit-card"
                  name="Credit Card"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  stripes-acq-components.paymentMethod.card
                  <span
                    class="sr-only"
                  >
                    stripes-components.readonly
                  </span>
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox readOnly"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-paymentMethod-eft"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="EFT"
                  id="clickable-filter-paymentMethod-eft"
                  name="EFT"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  stripes-acq-components.paymentMethod.eft
                  <span
                    class="sr-only"
                  >
                    stripes-components.readonly
                  </span>
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox readOnly"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-paymentMethod-deposit-account"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Deposit Account"
                  id="clickable-filter-paymentMethod-deposit-account"
                  name="Deposit Account"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  stripes-acq-components.paymentMethod.depAccount
                  <span
                    class="sr-only"
                  >
                    stripes-components.readonly
                  </span>
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox readOnly"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-paymentMethod-physical-check"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Physical Check"
                  id="clickable-filter-paymentMethod-physical-check"
                  name="Physical Check"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  stripes-acq-components.paymentMethod.physicalCheck
                  <span
                    class="sr-only"
                  >
                    stripes-components.readonly
                  </span>
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox readOnly"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-paymentMethod-bank-draft"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Bank Draft"
                  id="clickable-filter-paymentMethod-bank-draft"
                  name="Bank Draft"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  stripes-acq-components.paymentMethod.bankDraft
                  <span
                    class="sr-only"
                  >
                    stripes-components.readonly
                  </span>
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox readOnly"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-paymentMethod-internal-transfer"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Internal Transfer"
                  id="clickable-filter-paymentMethod-internal-transfer"
                  name="Internal Transfer"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  stripes-acq-components.paymentMethod.internalTransfer
                  <span
                    class="sr-only"
                  >
                    stripes-components.readonly
                  </span>
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
          <div
            class="checkbox readOnly"
            data-test-checkbox="true"
          >
            <label
              class="label label checkboxInteractionStylesControl"
              for="clickable-filter-paymentMethod-other"
            >
              <span
                class="inner checkboxInteractionStyles"
              >
                <input
                  aria-invalid="false"
                  class="input"
                  data-test-checkbox-filter-data-option="Other"
                  id="clickable-filter-paymentMethod-other"
                  name="Other"
                  type="checkbox"
                  value=""
                />
                <span
                  class="checkboxIcon"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.395 4.617L5.63 9.383 3.605 7.358"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                <span
                  class="labelText"
                >
                  stripes-acq-components.paymentMethod.other
                  <span
                    class="sr-only"
                  >
                    stripes-components.readonly
                  </span>
                </span>
              </span>
            </label>
            <div
              role="alert"
            />
          </div>
        </div>
      </div>
    </section>
    <section
      class="accordion hasSeparator"
      data-test-accordion-section="true"
      id="org-filter-acqUnitIds"
    >
      <div
        class="headerWrapper"
        tabindex="-1"
      >
        <h3
          class="headline size-small margin-small font-weight-bold block"
          data-test-headline="true"
        >
          <button
            aria-controls="accordion28"
            aria-expanded="false"
            aria-label="stripes-acq-components.filter.acqUnit filter list"
            class="filterSetHeader"
            id="accordion-toggle-button-org-filter-acqUnitIds"
            tabindex="0"
            type="button"
          >
            <span>
              Icon
            </span>
            <div
              class="labelArea"
            >
              <div
                class="filterSetLabel"
              >
                stripes-acq-components.filter.acqUnit
              </div>
            </div>
          </button>
        </h3>
      </div>
      <div
        class="content-wrap"
        style="z-index: 2;"
      >
        <div
          aria-label="[object Object]"
          aria-labelledby="accordion-toggle-button-org-filter-acqUnitIds"
          class="content-region"
          data-test-accordion-wrapper="true"
          id="accordion28"
          role="region"
        >
          <div
            class="tether-target tether-enabled tether-abutted tether-abutted-left tether-abutted-right tether-abutted-top tether-abutted-bottom tether-element-attached-top tether-element-attached-center tether-target-attached-bottom tether-target-attached-center"
            style="position: relative; width: 100%;"
          >
            <div
              aria-live="assertive"
              aria-relevant="additions"
              class="sr-only"
            />
            <div
              class="selectionControlContainer"
            >
              <button
                aria-disabled="true"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="accordion-toggle-button-org-filter-acqUnitIds selected-acqUnitIds-selection-item"
                aria-owns="sl-acqUnitIds-selection"
                class="selectionControl formControl"
                disabled=""
                id="acqUnitIds-selection"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  stripes-components.selection.controlLabel
                </span>
                <div
                  class="singleValue"
                  id="selected-acqUnitIds-selection-item"
                />
              </button>
              <div
                class="selectionEndControls"
              >
                <div
                  class="textFieldIcon"
                >
                  <span>
                    Icon
                  </span>
                </div>
              </div>
            </div>
            <div
              role="alert"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
